--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jquery": "^3.2.0",
     "keyboardjs": "^2.3.3",
     "lodash": "^4.17.4",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   }
 }
