--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   "dependencies": {
     "babylonjs": "^2.5.0",
     "d3": "^4.7.3",
+    "express": "^4.15.2",
     "immutable": "^3.8.1",
     "jquery": "^3.2.0",
     "keyboardjs": "^2.3.3",
     "lodash": "^4.17.4",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io": "^1.7.3"
   }
 }
