--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server",
+    "start": "node server/server.js",
     "test": "standard"
   },
   "repository": {
@@ -32,6 +32,7 @@
   "dependencies": {
     "babylonjs": "^2.5.0",
     "d3": "^4.7.3",
+    "dat.gui": "^0.6.1",
     "express": "^4.15.2",
     "immutable": "^3.8.1",
     "jquery": "^3.2.0",
